# AccountantAssist

./: .gitignore  README.md  main.py  product_description_generator.py  pyproject.toml
